--- a/src/StravaSegmentHunter.Web/StravaSegmentHunter.Web.csproj
+++ b/src/StravaSegmentHunter.Web/StravaSegmentHunter.Web.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.4" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="SimpleDatastore" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -20,6 +21,10 @@
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="App_Data" />
     </ItemGroup>
 
 </Project>
